log
Thu 05 Oct 2023 12:42:53 PM UTC: 
 tests:  0|5
total_score: 0/70
4cf2248
Thu 05 Oct 2023 12:51:33 PM UTC: 
 sudoku.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:62:27: error: unused variable ‘adj_node’ [-Werror=unused-variable]
   62 |                     Node* adj_node = copy(n);
      |                           ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
0cac50e
Thu 05 Oct 2023 12:52:40 PM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:62:27: error: unused variable ‘adj_node’ [-Werror=unused-variable]
   62 |                     Node* adj_node = copy(n);
      |                           ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
ac35eb7
